scss/pages/_home.scss
.dc-section {
  position: relative;
  margin-top: 30px;
  padding-top: 30px;
/*
  @media screen and (min-width: $BP_XXL) {
    padding-top: 300px;
  }*/
  &--header {
    font-size: 42px;
    margin-bottom: 50px;
  }
  &--button {
    margin-top: 60px;
  }
  &--bottom {
    position: relative;
  }
  &--bottom-bg {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;

    img {
    }
  }
  &--blue,
  &--red,
  &--red,
  &--yellow,
  &--green,
  &--orange {
    z-index: -2;

    &>div {
      z-index: 1;
    }
    &:before {
      //background: url('../images/triangle_green_top.png') no-repeat 0 0;
      background-size: initial;
      top: -600px;
      content: '';
      display: block;
      height: 871px;
      left: 0;
      position: absolute;
      right: 0;
      z-index: -1;

      @media screen and (min-width: $BP_XL) {
        background-size: cover !important;
      }
      @media screen and (max-width: $BP_MD) {
        top: -650px;
        left: -100px;
      }
      /*
      @media screen and (min-width: $BP_XXL) {
        background-size: cover;
        height: 1200px;
      }*/
    }
    &:after {
      background: inherit;
      top: 62%;
      content: '';
      display: block;
      height: 100%;
      left: 0;
      //background: url('../images/triangle_green_bottom.png') no-repeat 100% 0;
      position: absolute;
      right: 0;
      z-index: -1;

      @media screen and (min-width: $BP_XL) {
        width: 100%;
      }
      @media screen and (max-width: $BP_MD) {
        top: 80%;
        background-position: 80% 60px;
      }
      /*
      @media screen and (min-width: $BP_XXL) {
        background-size: cover;
        height: 1200px;
      }*/
    }
  }
  &--blue {
    background: $BLUE_1;

    &:before {
      //background: url('../images/triangle_blue_top.png') no-repeat 0 0;
      background-size: initial;
      /*
      @media screen and (min-width: $BP_XXL) {
        background-size: cover;
        height: 1200px;
      }*/
    }
    &:after {
      //background: url('../images/triangle_blue_bottom_special.png') no-repeat 100% 0;
      background-size: initial;
      height: 872px;
      top: 85%;

      @media screen and (max-width: $BP_LG) {
        background-position: -200px 0;
      }
      @media screen and (max-width: $BP_MD) {
        //background: url('../images/triangle_blue_bottom_nothing.png') no-repeat 0 0;
      }
      /*
      @media screen and (min-width: $BP_XXL) {
        background-size: cover;
        height: 1200px;
      }*/
    }
  }
  &--red {
    background: $RED_1;
  }
  &--green {
    background: $GREEN_1;
  }
  &--yellow {
    background: $YELLOW_1;

    &:before {
      //background: url('../images/triangle_yellow_top.png') no-repeat 0 0;
      background-size: initial;
    }
    &:after {
      //background: url('../images/triangle_yellow_bottom.png') no-repeat 100% 0;
      background-size: initial;
      top: 60%;
    }
  }
  &--orange {
    background: $ORANGE_1;
  }
  &--no-after {
    &:after {
      content: none;
    }
  }
  &--no-before {
    &:before {
      content: none;
    }
  }
  &--footer{
    position: relative;

    $FOOTER_WIDTH: 900px;

    &:before {
      //background: url('../images/triangle_yellow_footer.png') no-repeat 0 0;
      background-size: initial;
      position: absolute;
      bottom: 0;
      height: $FOOTER_WIDTH * .605;
      z-index: -1;
      content: '';
      display: block;
      right: 0;
      width: $FOOTER_WIDTH;

      @media screen and (max-width: $BP_MD) {
        background-position: 200px 0;
      }
      /*
      @media screen and (min-width: $BP_XXL) {
        background-size: cover;
        height: $FOOTER_WIDTH * .605 * 1.2;
        width: $FOOTER_WIDTH * 1.2;
      }*/
    }
    @media screen and (max-width: $BP_MD) {
      margin-top: 0;
    }
  }
}

.dc-redfooter {
  border-radius: 25px 25px 0px 0px;
  background: $FOOTER;

  .text-white {
    color: white;
  }
}

.dc-about {
}

.dc-hero {
  height: 80%;
  height: 80vh;
  max-height: 800px;
  min-height: 600px;
  position: relative;
  margin: 0;
  margin-bottom: 100px;
  padding-top: 100px;

  @media screen and (max-width: $BP_MD) {
    padding-top: 20%;
    height: auto;
  }
  &:after {
    content: '';
    display: block;
    position: absolute;
    top: -80px;
    left: 0;
    right: 0;
    height: 1700px;
    background: url('../images/background1.png') no-repeat 0 center;
    background-size: cover;
    z-index: -1;

    @media screen and (max-width: $BP_LG) {
      left: -100px;
    }

    @media screen and (min-width: $BP_XXL) {
      height: 2000px;
    }
    @media screen and (max-width: $BP_MD) {
      top: -300px;
    }
  }
  h1 {
    font-size: 48px;

    @media screen and (max-width: $BP_MD) {
      font-size: 36px;
    }
  }
  &--description {
    margin-top: 40px;
    margin-bottom: 40px;

    h4 {
      line-height: 1.5;
    }
  }
  &--bg {
    // Mobile styles (shove image to right)
    width: 100%;
    height: 100%;
    position: absolute;
    top: -80px;

    img {
      width: auto;
      min-width: 100%;
    }
    @media screen and (max-width: $BP_MD) {
      left: -200px;
      top: 0;
    }
  }
}

.mail-link {
  color: $RED_1;
  text-decoration: underline;
}

.dc-card {
  border-radius: 25px;
  padding: 36px 20px;
  background: #FFF;
  margin-bottom: 30px;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);

  &--img {
    margin-bottom: 20px;
    margin-top: 20px;
    border-radius: 50%;
    width: 170px;
    height: 170px;
  }
  &--body {
    h3 {
      margin-bottom: 10px;
    }
  }

 &--min {
   min-height: 400px;
 }
}

.dc-schedule {
  h4 {
    margin: 20px 0;
  }
  p {
    line-height: 24px;
    position: relative;
    padding-left: 30px;
    font-size: 16px;
  }
}

.dc-faq {


  &--section {
    margin-bottom: 40px;
    padding-left: 30px;
    padding-right: 30px;

    h4 {
      margin: 24px 0;
    }
  }
  &--text {
    line-height: 24px;
    position: relative;
    padding-left: 50px;

    &:before {
      content: ' ';
      width: 6px;
      height: 50px;
      background-color: $GRAY_1;
      position: absolute;
      border-radius: 3px;
      left: 30px;
      top: 0;
    }
  }
}

.dc-featurette {
  z-index: -2;

  &--left,
  &--right {
    position: absolute;
    z-index: -1;
    top: -20%;
  }
  &--left {
    left: -60px;

    &.second {
      top: -37%;
    }
  }
  &--right {
    right: 0;
    top: -75%;
  }
}

.dc-cta {
  margin-top: 30px;
  /*
  @media screen and (min-width: $BP_XXL) {
    margin-top: -100px !important;
  }*/
}

.dc-footer {
  bottom: 0;
  width: 100%;
  padding-bottom: 40px;

  #logo-dsp {
    vertical-align: middle;
    height: 80px;
  }
  #logo-designatucsd {
    vertical-align: middle;
    margin-right: 20px;
    width: 200px;
  }
  &--presented h4 {
    margin-bottom: 20px;
  }
}

.dc-sponsors {
  display: flex;

  .logo {
    width: 200px;
  }

  &--logos {
    margin-bottom: 30px;
  }
}

.dc-btn {
  padding: 15px 50px;
  border-radius: 12px;
  background-color: $ORANGE_1;
  color: $WHITE;
  border: none;
  font-size: 18px;
  letter-spacing: 0.5px;
  box-shadow: 0px 4px 20px $PINK_SHADOW;

  &:hover,
  &:focus,
  &:active,
  &:visited {
    background-color: $ORANGE_1;
    box-shadow: 0px 4px 20px $PINK_SHADOW;
  }
  &:hover {
    background-color: lighten($ORANGE_1, 5%);
  }
}

.dc-btn--footer {
  border: 3px solid white;

  &:hover {
    border-color: rgba(0,0,0,0);
  }
}

.dc-footer {
  &--icons {
    margin-top: 50px;
    padding: 14px 0;
    list-style-type: none;
    z-index: 1;
    font-size: 24px;

    li {
      display: inline-block;
      border: 3px solid white;
      border-radius: 24px;
      margin-left: 6px;

      a {
        display: block;
        width: 40px;
        height: 40px;
        text-align: center;
        line-height: 40px;
      }
    }
  }
}

.dc-breakout {
  
  .dc-divider {
    background: $SALMON;
    height: 10px;
    border-radius: 25px;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .session {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
  }
}

.dc-mobile-text-center {
  @media screen and (max-width: $BP_MD) {
    text-align: center;
  }
}

.dc-mobile-text-left {
  @media screen and (max-width: $BP_MD) {
    text-align: left;
  }
}

.dc-logo {
  margin-bottom: 60px;
  height: 50px;
  width: 100px;

  @media screen and (max-width: $BP_MD) {
    margin-bottom: 30px;
  }
}

